First-party FQCN shortening, test fixtures and split web client scripts
- jk format shortens fully-qualified names through TypeIndex and
  FqcnShortener; the external shortener leaves the manifests and lock.
- jk.toml declares test-fixture source roots; the engine resolves
  toolchains from the request and lock pins reach every consumer.
- The web client is split into per-concern scripts (wire, tree, chart,
  report, wizard) under a JS test harness; compat-bridge is deleted.
- buildSrc gains TestTiers, one tier per JUnit tag, and a gate report
  that counts what ran from the XML; size caps count code lines.
- Giant classes are peeled into owners: EngineEventDecoder, EngineJobs,
  WireStream, WorkspaceRunView, LockPipeline and PackagingKeys.

Tickets: JK-1003, JK-1018, JK-1021, JK-2601, JK-2602